--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h1 {
 }
 
 table th {
-  border: 1px solid;
+  border: 1px solid #ddd;
   height: 50px;
   text-align: left;
   vertical-align: baseline;
@@ -46,7 +46,7 @@ table th {
 }
 
 table td {
-  border: 1px solid;
+  border: 1px solid #ddd;
   text-align: center;
   height: 100px;
   text-align: left;
@@ -84,6 +84,7 @@ table {
   margin-bottom: 20px;
   height: 35px;
   border-color: black;
+  border-radius: 10px;
 }
 
 .post-contents form {
@@ -132,9 +133,10 @@ table {
 
 button {
   width: 100px;
-  background-color: #000;
-  color: #dddddd;
+  background-color: #359feb;
+  color: #fff;
   cursor: pointer;
+  border-style: none;
 }
 
 .post-container a {
@@ -299,8 +301,7 @@ button {
   height: 0;
   margin: 0 20px;
   text-align: center;
-  /* position: absolute;
-  z-index: 10; */
+  font-size: 15px;
 }
 
 .active {
